<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">


        <TextView
                android:text="@string/create_account_top_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textAllCaps="true"/>

        <AutoCompleteTextView
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_account_mail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>

        <AutoCompleteTextView
                android:id="@+id/sign_up_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_account_username"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:singleLine="true"/>

        <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_account_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        <Button
                android:id="@+id/sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/create_account_action_sing_up"
                android:textStyle="bold" />

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
            <TextView
                    android:id="@+id/sign_up_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/errorColor"
                    android:textSize="@dimen/sign_up_fragment_error_font_size"
                    android:textAlignment="center"
                    android:visibility="gone"/>
            <TextView
                    android:id="@+id/sign_up_success"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/successColor"
                    android:textSize="@dimen/sign_up_fragment_success_font_size"
                    android:textAlignment="center"
                    android:visibility="gone" />
        </RelativeLayout>

</LinearLayout>

